# package_info_by_all

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  app_configuration.mk  window_configuration.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.mk
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/web/: index.html  manifest.json
example/windows/: AppConfiguration.props  Runner.sln  Runner.vcxproj  Runner.vcxproj.filters
example/windows/flutter/: GeneratedPlugins.props  generated_plugin_registrant.cc
ios/: package_info_by_all.podspec
ios/Classes/: PackageInfoByAllPlugin.h  PackageInfoByAllPlugin.m  SwiftPackageInfoByAllPlugin.swift
lib/: package_info_by_all.dart  package_info_by_all_web.dart
lib/src/: package_info_platform.dart  package_info_web.dart
linux/: CMakeLists.txt  package_info_by_all_plugin.cc  package_info_by_all_plugin.h  plugin_configuration.mk
macos/: package_info_by_all.podspec
macos/Classes/: PackageInfoByAllPlugin.swift
test/: package_info_by_all_test.dart
windows/: CMakeLists.txt  PluginInfo.props  package_info_by_all_plugin.cpp  package_info_by_all_plugin.h  plugin.vcxproj  plugin.vcxproj.filters
(+9 files in other folders)
